--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -31,7 +31,7 @@ input {
     font-size: 20px;
     border: none;
     border-radius: 12px;
-    background: #F3F3F3;
+    background: #e1e1e18c;
     width: calc(100% - 36px);
     outline: none;
 }
@@ -427,9 +427,10 @@ input {
     width: 55px;
 
     img {
-        width: 25px;
-        height: 25px;
+        width: 33px;
+        height: 33px;
         object-fit: contain;
+        border-radius: 50px;
     }
 }
 
